[gd_scene load_steps=2 format=3 uid="uid://bbb2p0jv1ppm7"]

[ext_resource type="Script" path="res://game_scenes/game_clear/game_clear.gd" id="1_el225"]

[node name="game_clear" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_el225")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 408.0
offset_top = 232.0
offset_right = 767.0
offset_bottom = 255.0
text = "The elemental orb of power sits in front of you"

[node name="Label2" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 408.0
offset_top = 264.0
offset_right = 753.0
offset_bottom = 287.0
text = "And the seasons are back to their original cycle"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -15
layout_mode = 0
offset_right = 1166.0
offset_bottom = 660.0
color = Color(0, 0, 0, 1)

[node name="btnDestroy" type="Button" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 272.0
offset_right = 617.0
offset_bottom = 320.0
text = "Destroy it!"

[connection signal="pressed" from="btnDestroy" to="." method="_on_btn_destroy_pressed"]
